--- a/theme.css
+++ b/theme.css
@@ -10,7 +10,6 @@ p {
     background-color: blue;
     color: white;
     text-align: center;
-
 }
 
 .loginParagraph {
@@ -19,10 +18,34 @@ p {
 
 .signUp {
     width: 80%;
+    margin-left: 10%;
 }
 
-input[type=text], select {
+.signUpDiv {
     width: 80%;
+    margin-left: 10%;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #EBEBEB;
+    color: white;
+    text-align: center;
+ }
+
+
+/* .footer {
+    position: fixed;
+    background-color: blue;
+    color: white;
+    text-align: center;
+} */
+
+input[type=text], select {
+    width: 60%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -32,19 +55,19 @@ input[type=text], select {
 }
 
 input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
+    background-color: blue;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-left: 45%;
+    border: solid blue;
 }
 
 input[type=submit1] {
-    width: 10%;
-    background-color: #4CAF50;
+    background-color: blue;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -54,11 +77,15 @@ input[type=submit1] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #ffffff;
+    color: blue;
+    border-color: blue;
+    border: solid blue;
+    
 }
 
-div {
+/* div {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-}
+} */
