--- a/theme.css
+++ b/theme.css
@@ -34,17 +34,9 @@ p {
     background-color: #EBEBEB;
     color: white;
     text-align: center;
- }
+}
 
-
-/* .footer {
-    position: fixed;
-    background-color: blue;
-    color: white;
-    text-align: center;
-} */
-
-input[type=text], select {
+ input[type=text], select {
     width: 60%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -54,6 +46,31 @@ input[type=text], select {
     box-sizing: border-box;
 }
 
+.button1 {
+    background-color: blue;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 45%;
+    border: solid blue;
+}
+
+.footerButtons {
+    background-color: blue;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 45%;
+    border: solid blue;
+}
+}
+/*
 input[type=submit] {
     background-color: blue;
     color: white;
@@ -74,8 +91,11 @@ input[type=submit1] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-left: 45%;
+    border: solid blue;
+    /* float: left; 
 }
-
+*/
 input[type=submit]:hover {
     background-color: #ffffff;
     color: blue;
@@ -84,8 +104,10 @@ input[type=submit]:hover {
     
 }
 
-/* div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-} */
+input[type=submit1]:hover {
+    background-color: #ffffff;
+    color: blue;
+    border-color: blue;
+    border: solid blue;
+    
+} 
