--- a/pages/theme.css
+++ b/pages/theme.css
@@ -2,6 +2,11 @@ p {
     font: 15px Arial, sans-serif;
 }
 
+.main {
+    width: 80%;
+    margin-left: 10%;
+}
+
 .button1 {
     padding: 100px 204px;
 }
@@ -113,13 +118,12 @@ input[type=submit1]:hover {
 } 
 
 
-
-.slidecontainer {
+/* .slidecontainer {
   width: 100%;
-}
+} */
 
 .slider {
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
   width: 100%;
   height: 15px;
   border-radius: 5px;
@@ -150,4 +154,4 @@ input[type=submit1]:hover {
   border-radius: 50%;
   background: #04AA6D;
   cursor: pointer;
-}
+} 
