--- a/pages/theme.css
+++ b/pages/theme.css
@@ -3,8 +3,8 @@ p {
 }
 
 .main {
-    width: 80%;
-    margin-left: 10%;
+    width: 50%;
+    margin-left: 25%;
 }
 
 .button1 {
@@ -207,11 +207,33 @@ input[type=submit1]:hover {
     width: 70%;
 }
 
+
+.option1 {
+    background-color: aqua;
+    width: 20%;
+    height: 20%;
+    margin-left: 2%;
+}
+
+.option2 {
+    background-color: aqua;
+    width: 20%;
+    height: 20%;
+    margin-left: 2%;
+}
+
+.option3 {
+    background-color: aqua;
+    width: 20%;
+    height: 20%;
+    margin-left: 2%;
+}
+
 .faceClass {
     float: right;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1080px) {
     body {
       background-color: lightblue;
     }
@@ -219,5 +241,10 @@ input[type=submit1]:hover {
     .face {
         width: 10%;
         margin-left: 20%;
+    }
+
+    .main {
+        width: 80%;
+        margin-left: 10%;
     }
   }
