--- a/pages/theme.css
+++ b/pages/theme.css
@@ -15,15 +15,17 @@ p {
     border-radius: 10px;
 }
 
+.startParagraph{
+    text-align: center;
+}
+
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: #EBEBEB;
-    color: white;
-    text-align: center;
-    border-radius: 10px;
+    border-radius: 2%;
 }
 
 .face {
