--- a/pages/theme.css
+++ b/pages/theme.css
@@ -148,6 +148,8 @@ button:hover {
     margin-left: 2%;
     border-radius: 10px;
     padding: 1%;
+    display: inline-block;
+    color: black;
 }
 
 .option2 {
@@ -156,6 +158,8 @@ button:hover {
     height: 20%;
     margin-left: 2%;
     border-radius: 10px;
+    display: inline-block;
+    color: black;
 }
 
 .option3 {
@@ -164,6 +168,15 @@ button:hover {
     height: 20%;
     margin-left: 2%;
     border-radius: 10px;
+    display: inline-block;
+    color: black;
+}
+
+img {
+    width: 90%;
+    margin-left: 5%;
+    /* margin-right: 10%; */
+    margin-top: 2%;
 }
 
 .faceClass {
