Working Breathing Exercises
Addition of Working Breathing Exercises and general progress to other sections.

15/03/2022.

--- a/pages/theme.css
+++ b/pages/theme.css
@@ -153,21 +153,23 @@ button:hover {
 }
 
 .option2 {
-    background-color: aqua;
+    background-color: #d3d3d3;
     width: 20%;
     height: 20%;
     margin-left: 2%;
     border-radius: 10px;
+    padding: 1%;
     display: inline-block;
     color: black;
 }
 
 .option3 {
-    background-color: aqua;
+    background-color: #d3d3d3;
     width: 20%;
     height: 20%;
     margin-left: 2%;
     border-radius: 10px;
+    padding: 1%;
     display: inline-block;
     color: black;
 }
