--- a/pages/theme.css
+++ b/pages/theme.css
@@ -115,6 +115,33 @@ button:hover {
     padding-bottom: 1px;
 }
 
+.login {    
+    color: black;
+    background-color: white;
+    /* border-radius: 10px; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding-left: 4%;
+    padding-top: 1px;
+    padding-right: 4%;
+    padding-bottom: 1px;
+}
+
+.loginbutton {
+    color: black;
+    background-color: white;
+    /* border-radius: 10px;
+    border-top-left-radius: 10px; */
+
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  
+    padding-left: 4%;
+    padding-top: 1px;
+    padding-right: 4%;
+    padding-bottom: 1px;
+}
+
 .about {
     background-color: #d3d3d3;
     border-radius: 10px;
