--- a/pages/theme.css
+++ b/pages/theme.css
@@ -46,7 +46,7 @@ p {
     text-align: right;
 }
 
-button {
+button, input[type=submit] {
     background-color: blue;
     color: white;
     padding: 14px 20px;
@@ -59,6 +59,26 @@ button {
 }
 
 button:hover {
+    background-color: #ffffff;
+    color: blue;
+    border-color: blue;
+    border: solid blue;
+    
+}
+
+.breathingButton {
+    background-color: blue;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 45%;
+    border: solid blue;
+}
+
+.breathingButton:hover {
     background-color: #ffffff;
     color: blue;
     border-color: blue;
@@ -112,13 +132,23 @@ button:hover {
     padding-left: 4%;
     padding-top: 1px;
     padding-right: 4%;
+    padding-bottom: 10px;
+}
+
+.diaryEntry {
+    color: white;
+    background-color: blue;
+    border-radius: 10px;
+    padding-left: 4%;
+    padding-top: 1px;
+    padding-right: 4%;
     padding-bottom: 1px;
+    margin-bottom: 2%;
 }
 
 .login {    
     color: black;
-    background-color: white;
-    /* border-radius: 10px; */
+    background-color: #cfcfcf;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     padding-left: 4%;
@@ -129,13 +159,9 @@ button:hover {
 
 .loginbutton {
     color: black;
-    background-color: white;
-    /* border-radius: 10px;
-    border-top-left-radius: 10px; */
-
+    background-color: #cfcfcf;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-  
     padding-left: 4%;
     padding-top: 1px;
     padding-right: 4%;
@@ -143,7 +169,7 @@ button:hover {
 }
 
 .about {
-    background-color: #d3d3d3;
+    background-color: #cfcfcf;
     border-radius: 10px;
     padding-left: 4%;
     padding-top: 1px;
@@ -159,7 +185,8 @@ button:hover {
     padding-left: 4%;
     padding-top: 1px;
     padding-right: 4%;
-    padding-bottom: 1px;
+    padding-bottom: 10px;
+ 
 }
 
 .feelingMessage {
@@ -201,10 +228,20 @@ button:hover {
     color: black;
 }
 
+.option4 {
+    background-color: #d3d3d3;
+    width: 20%;
+    height: 20%;
+    margin-left: 2%;
+    border-radius: 10px;
+    padding: 1%;
+    display: inline-block;
+    color: black;
+}
+
 img {
     width: 90%;
     margin-left: 5%;
-    /* margin-right: 10%; */
     margin-top: 2%;
 }
 
