Addition of Login and Sign Up
Addition of Login, sign up and 2 meditations. removal of excess HTML, CSS and JS code.

Other general progress.

20/04/2022.

--- a/pages/theme.css
+++ b/pages/theme.css
@@ -82,8 +82,11 @@ button:hover {
     background-color: #ffffff;
     color: blue;
     border-color: blue;
-    border: solid blue;
-    
+    border: solid blue; 
+}
+
+.breathingText {
+    text-align: center;
 }
 
 .slider {
