Addition of EJS
Addition of EJS and HTML moved to views folder.

other general progress.

30/04/2022.

--- a/views/breathing.html
+++ b/views/breathing.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class = "main">
-            
+                <p> Logged in as: <%=usernamex%> </p>
                 <div class = "activities">
 
                     <h1> Breathing Exercises: </h1>
