--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class = "main">
-            
+                <p> Logged in as: <%=usernamex%> </p>
                 <div class = "activities">
                     <h1> Activities: </h1>
                     <p> Find activities to reduce stress and help you cope with your feelings. </p>
@@ -20,7 +20,7 @@
                     <div class = "option">
                         <p> Meditation </p>
                         <button id = "meditationLetGoButton" onclick = "meditationLetGoFunction()"> Let Go </button>
-                        <button id = "meditationBePresentButton" onclick = "meditationBePresentButtonFunction()"> Be Present </button>
+                        <button id = "meditationBePresentButton" onclick = "meditationBePresentFunction()"> Be Present </button>
                     </div>
 
                     <div class = "option">
@@ -38,7 +38,6 @@
                         <button id = "diaryButton" onclick = "diaryviewFunction()"> Go </button>
                     </div>
 
-                    
                 </div>
 
                 <div class = "externalHelp">
