--- a/views/invalid-login.html
+++ b/views/invalid-login.html
@@ -16,7 +16,7 @@
                     <h1> Login: </h1>
                     <p> Login to the Mental Health Web App to access helpful activities and advice. </p>
                     <div class = "login">
-                        <h1> Login </h1>
+                       <h1> Invalid Password and/or username combination. </h1>
                         <form action = "/login" method = "post">
                             <p id = "username"> Username: </p>
                             <input type = "text" name = "username" placeholder = "Username" id = "username" required>
