--- a/views/meditation-let-go.html
+++ b/views/meditation-let-go.html
@@ -12,12 +12,12 @@
             </div>
 
             <div class = "main">
-            
+                <p> Logged in as: <%=usernamex%> </p>
                 <div class = "activities">
                     <h1> Meditation: </h1>
                     <p> Use Meditations to calm down and relax. </p>
-                    <p> Daily Calm | 10 Minute Mindfulness Meditation | Be Present </p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZToicYcHIOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+                    <p> Daily Calm | 10 Minute Mindfulness Meditation | Letting Go </p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/syx3a1_LeFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </body>
