--- a/views/signup.html
+++ b/views/signup.html
@@ -17,6 +17,7 @@
                     <p>Sign up for an account to access the Mental Health Web Application.</p>
                     <div class = "login">
                         <form action="/signup" method="post">
+                            <h1> Invalid credentials combination</h1>
 
                             <p>Username: </p>    
                             <input type="text" name="username" placeholder="Name">    
@@ -26,6 +27,7 @@
     
                             <p>Password: </p>
                             <input type="text" name="password" placeholder="********">
+                            
     
                             <!-- <p>Confirm Password: </p>
                             <input type="text" name="confirmPassWord" placeholder="********"> -->
