Addition of Diary Creation.
Addition of Diary Creation and Mindfulness page placeholder.

Server now checks if a session is active before sending web pages, it will redirect the user to the login page otherwise.

30/04/2022.

--- a/views/diarycreation3.html
+++ b/views/diarycreation3.html
@@ -13,9 +13,9 @@
                     <h1> Diary: </h1>
                     <p> Record how your feeling here. </p>
                     <div class = "login">
-                        <form action = "/diarycreation" method = "post">
+                        <form action = "/diary-creation" method = "post">
                             <p>Today I am Feeling: </p>    
-                            <input type = "text" name = "username" placeholder = "Good, bad, sad, Excited...">
+                            <input type = "text" name = "diaryentry" placeholder = "Good, bad, sad, Excited...">
                             <div class = "loginbutton">
                                 <input type = "submit" value = "Submit">  
                             </div>
