--- a/views/home.html
+++ b/views/home.html
@@ -45,6 +45,13 @@
                     <p> Find support from mental health charities and other services. </p>
                     <p> These links will take you outside the Mental Health Web App and take you to the respective organisations page. </p>
 
+                    <div class = "option">
+                        <p> Samaritans </p>
+                        <button id = "samaritansButton" onclick = "samaritansFunction()"> Go </button>
+                        <a href = "tel:116123" > 116 123 </a>
+                        <a href = "mailto:jo@samaritans.org"> jo@samaritans.org </a>
+                    </div>
+                    
                     <div class = "option">                       
                             <p> National Health Service </p>
                         <button id = "nhsButton" onclick = "nhsFunction()"> Go </button>
@@ -55,11 +62,7 @@
                         <button id = "mindButton" onclick = "mindFunction()"> Go </button>
                     </div>
 
-                    <div class = "option">
-                        <p> Samaritans </p>
-                        <button id = "samaritansButton" onclick = "samaritansFunction()"> Go </button>
-                        <a href = "tel:116123" > 116 123 </a>
-                    </div>
+                    
 
                     <div class = "option">
                         <p> Project Semicolon </p>
