--- a/views/diaryview.html
+++ b/views/diaryview.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Diary - M H W A </title> 
+            <title> Diary View - Mental Health Web App </title> 
             <link rel = "stylesheet" href = "theme.css">
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
 
             <div class = "header" onclick = "homeFunction()">
-                <p> M H W A </p>                
+                <p> Mental Health Web App </p>                
             </div>
 
             <div class = "main">
             
                 <div class = "diaryEntry">
-                    <h1> Diary Entry Example 1 </h1>
-                    <p>Date created: </p> 
-                    <p> Example of an entry into the diary feature. </p>
+                    
+                    <table>
+                        <tr>
+                          <th>username</th>
+                          <th>diaryentry</th>                          
+                        </tr>
+                        <tr>
+                          <td>Alfreds Futterkiste</td>
+                          <td>Maria Anders</td>
+                          
+                        </tr>
+                        <tr>
+                          <td>Centro comercial Moctezuma</td>
+                          <td>Francisco Chang</td>
+                         
+                        </tr>
+                        <tr>
+                          <td>Ernst Handel</td>
+                          <td>Roland Mendel</td>
+                          
+                        </tr>
+                        <tr>
+                          <td>Island Trading</td>
+                          <td>Helen Bennett</td>
+                         
+                        </tr>
+                        <tr>
+                          <td>Laughing Bacchus Winecellars</td>
+                          <td>Yoshi Tannamuri</td>
+                          
+                        </tr>
+                        <tr>
+                          <td>Magazzini Alimentari Riuniti</td>
+                          <td>Giovanni Rovelli</td>
+                          
+                        </tr>
+                      </table>
+
                 </div>
 
-                <div class = "diaryEntry">
+                <!-- <div class = "diaryEntry">
                     <h1> Diary Entry Example 2 </h1>
                     <p> Example of an entry into the diary feature. </p>
-                </div>
+                </div> -->
 
             </div>
             <button id = "backbutton" onclick = "homeFunction()" > Back </button>
