--- a/views/meditation-let-go.html
+++ b/views/meditation-let-go.html
@@ -21,14 +21,5 @@
                 </div>
             </div>
         </body>
-        <script>
-            function homeFunction() {
-                location.href = "http://localhost:9000/"
-            }
-
-            function breathingFunction() {
-                location.href = "http://localhost:9000/breathing";
-            }
-   
-        </script>
+        <script src = "script.js"> </script>
     </html>
