--- a/views/mindfulness.html
+++ b/views/mindfulness.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Meditation - Mental Health Web App </title> 
+            <title> Mindfulness - Mental Health Web App </title> 
             <link rel = "stylesheet" href = "theme.css">
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
@@ -14,21 +14,12 @@
             <div class = "main">
                 <p> Logged in as: <%=usernamex%> </p>
                 <div class = "activities">
-                    <h1> Meditation: </h1>
+                    <h1> Mindfulness: </h1>
                     <p> Use Meditations to calm down and relax. </p>
                     <p> Daily Calm | 10 Minute Mindfulness Meditation | Letting Go </p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/syx3a1_LeFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </body>
-        <script>
-            function homeFunction() {
-                location.href = "http://localhost:9000/"
-            }
-
-            function breathingFunction() {
-                location.href = "http://localhost:9000/breathing";
-            }
-   
-        </script>
+        <script src = "script.js"> </script>
     </html>
