--- a/views/theme.css
+++ b/views/theme.css
@@ -66,8 +66,12 @@ button:hover {
     
 }
 
-.breathingButton {
-    background-color: blue;
+.functionButton{
+    text-align: center;
+}
+
+/* breatheButton {
+    background-color: red;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -76,7 +80,7 @@ button:hover {
     cursor: pointer;
     margin-left: 45%;
     border: solid blue;
-}
+} */
 
 .breathingButton:hover {
     background-color: #ffffff;
@@ -221,15 +225,21 @@ img {
     float: right;
 }
 
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 500px) {
    
-    .face {
+    /* .face {
         width: 10%;
         margin-left: 20%;
-    }
+    } */
 
     .main {
-        width: 80%;
-        margin-left: 10%;
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    button, input[type=submit] {
+        
+        padding: 1px 1px;
+        
     }
   }
