--- a/views/mindfulness.html
+++ b/views/mindfulness.html
@@ -7,12 +7,13 @@
         </head>
         <body>
 
-            <div class = "header" onclick = "homeFunction()">
-                <p> Mental Health Web App </p>                
-            </div>
+            <ul class = "topnav">
+                <li><a class = "active" href = "http://localhost:9000/home"> Home </a></li>               
+                <li class="right"><a href="http://localhost:9000/account-management"> <%=usernamex%> </a></li>
+            </ul>
 
             <div class = "main">
-                <p> Logged in as: <%=usernamex%> </p>
+                <!-- <p> Logged in as: <%=usernamex%> </p> -->
                 <div class = "activities">
                     <h1> Mindfulness: </h1>
                     <p> Use Meditations to calm down and relax. </p>
