--- a/views/signup.html
+++ b/views/signup.html
@@ -25,7 +25,8 @@
                             <input type="text" name="email" placeholder="Person@example.net">
     
                             <p>Password: </p>
-                            <input type="text" name="password" placeholder="********">
+                            <input type="password" name="password" placeholder="********">
+                            <!-- <input type = "password" name = "password" placeholder = "Password" id = "password" required> -->
                             
     
                             <!-- <p>Confirm Password: </p>
