--- a/views/invalid-signup.html
+++ b/views/invalid-signup.html
@@ -18,7 +18,9 @@
                     <p>Sign up for an account to access the Mental Health Web Application.</p>
                     <div class = "login">
                         <form action="/signup" method="post">
-                            <h1> Invalid Credentials </h1>
+                            <div class = "invalid">
+                                <p> Invalid Credentials </p>
+                            </div>
                             <p>Username: </p>    
                             <input type="text" name="username" placeholder="Name">    
     
@@ -26,13 +28,9 @@
                             <input type="text" name="email" placeholder="Person@example.net">
     
                             <p>Password: </p>
-                            <input type="text" name="password" placeholder="********">
-                            
-                            <!-- <p>Confirm Password: </p>
-                            <input type="text" name="confirmPassWord" placeholder="********"> -->
-    
-                            <div class = "loginbutton">
-                                <!-- <button id = "login"> Login </button> -->
+                            <input type="text" name="password" placeholder="********">                            
+                           
+                            <div class = "loginbutton">                                
                                 <input type="submit" value="SignUp">  
                                 <p> Already a user of the Mental Health Web App? <a href = "http://localhost:9000/login"> Log in </a></p>
                             </div>
