--- a/views/theme.css
+++ b/views/theme.css
@@ -8,6 +8,10 @@ p {
     border-radius: 10px;
 }
 
+.invalid {
+    color: red;
+}
+
 .header {
     background-color: blue;
     color: white;
@@ -15,7 +19,7 @@ p {
     border-radius: 10px;
 }
 
-.startParagraph{
+.startParagraph {
     text-align: center;
 }
 
@@ -28,24 +32,6 @@ p {
     border-radius: 2%;
 }
 
-.face {
-    width: 5%;
-    margin-left: 40%;
-}
-
-.minus {
-    width: 5%;
-    float: left;
-    text-align: left;
-}
-
-.plus {
-    width: 5%;
-    margin-left: 90%;
-    float: left;
-    text-align: right;
-}
-
 button, input[type=submit] {
     background-color: blue;
     color: white;
@@ -54,33 +40,20 @@ button, input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    /* margin-left: 45%; */
     border: solid blue;
 }
 
 button:hover {
-    background-color: #ffffff;
+    background-color: blue;
     color: blue;
-    border-color: blue;
+    border-color: #ffffff;
     border: solid blue;
     
 }
 
-.functionButton{
+.functionButton {
     text-align: center;
 }
-
-/* breatheButton {
-    background-color: red;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left: 45%;
-    border: solid blue;
-} */
 
 .breathingButton:hover {
     background-color: #ffffff;
@@ -91,45 +64,6 @@ button:hover {
 
 .breathingText {
     text-align: center;
-}
-
-.slider {
-  -webkit-appearance: none; 
-  width: 100%;
-  height: 15px;
-  border-radius: 5px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
-
-.slider:hover {
-  opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: blue;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: blue;
-  cursor: pointer;
-} 
-
-.feelingHeaderDiv {
-    width: 70%;
-    text-align: right;
 }
 
 .activities {
@@ -196,12 +130,6 @@ button:hover {
  
 }
 
-.feelingMessage {
-    color: white;
-    background-color: blue;
-    width: 70%;
-}
-
 .option {
     background-color: #d3d3d3;
     width: 20%;
@@ -215,31 +143,48 @@ button:hover {
     text-align: center;
 }
 
-img {
-    width: 90%;
-    margin-left: 5%;
-    margin-top: 2%;
+/* Navbar */
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #EBEBEB;
 }
 
-.faceClass {
-    float: right;
+ul.topnav li {
+    float: left;
+}
+
+ul.topnav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {
+    background-color: #111;
+}
+
+ul.topnav li a.active {
+    background-color: blue;
+}
+
+ul.topnav li.right {
+    float: right; 
+    background-color: #111; 
 }
 
 @media only screen and (max-width: 500px) {
    
-    /* .face {
-        width: 10%;
-        margin-left: 20%;
-    } */
-
     .main {
         width: 100%;
         margin-left: 0%;
     }
 
     button, input[type=submit] {
-        
         padding: 1px 1px;
-        
     }
   }
