--- a/views/mindfulness.html
+++ b/views/mindfulness.html
@@ -15,8 +15,7 @@
                     <h1> Mindfulness: </h1>
                     <p> Use Meditations to calm down and relax. </p>
                     <p> Daily Calm | 10 Minute Mindfulness Meditation | Letting Go </p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/syx3a1_LeFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZToicYcHIOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
             </div>
         </body>
         <script src = "/js/script.js" type="text/javascript"></script>
