Update to about page
Update to about page - improved description of app.

12/05/2022.

--- a/views/about.html
+++ b/views/about.html
@@ -5,17 +5,17 @@
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
-
             <div class = "header" onclick = "homeFunction()">
                 <p> Mental Health Web App </p>                
             </div>
-
             <div class = "main">
                 <div class = "activities">
                     <h1> About: </h1>
                     <div class = "login">                        
-                        <p> The Mental Health Web App is designed to assist users who suffer with mental health problems such as Autism, Depression, Anxiety et al and is Free to use. </p> <br>
-                        <p> Note. This Web App is not a Replacement for medical treatment with a trained professional. </p> <br>
+                        <p> The Mental Health Web App is designed to assist users in improving their mental health. </p>
+                        <p> The app can help users with conditions including Autism, Depression, Anxiety et al and is Free to use. </p>
+                        <p> Use this app to relax, regain focus and find support.</p> <br>
+                        <p> Disclaimer! This app is not to be used a replacement for medical treatment with a trained professional. </p> <br>
                         <button id = "backButton" onclick = "loginFunction()">Start</button>
                     </div>
                 </div>
