--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -27,9 +27,10 @@ p {
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
+    width: 50%;
     background-color: #EBEBEB;
     border-radius: 2%;
+    margin-left: 25%;
 }
 
 button, input[type=submit] {
