--- a/views/about.html
+++ b/views/about.html
@@ -4,11 +4,11 @@
             <title> About - Mental Health Web App </title>             
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
-        <body>
-            <div class = "header" onclick = "homeFunction()">
-                <p> Mental Health Web App </p>                
-            </div>
+        <body>            
             <div class = "main">
+                <div class = "header" onclick = "homeFunction()">
+                    <p> Mental Health Web App </p>                
+                </div>
                 <div class = "activities">
                     <h1> About: </h1>
                     <div class = "login">                        
@@ -23,4 +23,21 @@
         </body>
         <script src = "/js/script.js" type = "text/javascript" ></script>
         <link href = "/css/theme.css" rel = "stylesheet" type = "text/css">
+        <style>
+            body {
+                background-image: url("/img/login.jpg");
+                background-repeat: no-repeat;
+                background-size: 100%;                
+            }
+
+              /* @media for Responsive design. */
+            @media only screen and (max-width: 700px) {
+            
+            body {
+                background-image: url("/img/login.jpg");
+                background-repeat: no-repeat;
+                background-size: auto;                
+            }
+            }
+        </style>
     </html>
