--- a/views/delete-account.html
+++ b/views/delete-account.html
@@ -15,14 +15,12 @@
                                       
                     <div class = "login">
                         <p> Are you sure you wish to delete your account? </p>
-                    <p> Delete <%=usernamex%> ? </p> 
+                    <p> Delete <%=usernamex%>? </p> 
                     <div class = "invalid">
                         <p> Warning! - This cannot be undone. </p>
                     </div>
                     <p> Click delete to erase your account and all diary entries. </p> 
-                        <form action = "/delete-account" method = "post">
-                            <!-- <p id = "newusername"> New Username: </p>
-                            <input type = "text" name = "newusername" placeholder = "Username" id = "newusername" required>                             -->
+                        <form action = "/delete-account" method = "post">                           
                             <div class = "loginbutton">
                                 <input type = "submit" value = "Delete">                               
                             </div>
@@ -33,4 +31,21 @@
         </body>
         <script src = "/js/script.js" type="text/javascript"></script>
         <link href="/css/theme.css" rel="stylesheet" type="text/css">
+        <style>
+            body {
+                background-image: url("/img/account.jpg");
+                background-repeat: no-repeat;
+                background-size: 100%;                
+            }
+
+              /* @media for Responsive design. */
+            @media only screen and (max-width: 700px) {
+            
+            body {
+                background-image: url("/img/account.jpg");
+                background-repeat: no-repeat;
+                background-size: auto;                
+            }
+            }
+        </style>
     </html>
