--- a/views/home.html
+++ b/views/home.html
@@ -38,8 +38,8 @@
                     <div class = "option">
                         <p> Samaritans </p>
                         <button id = "samaritansButton" onclick = "samaritansFunction()"> Go </button>
-                        <a href = "tel:116123" > 116 123 </a>
-                        <a href = "mailto:jo@samaritans.org"> jo@samaritans.org </a>
+                        <!-- <a href = "tel:116123" > 116 123 </a>
+                        <a href = "mailto:jo@samaritans.org"> jo@samaritans.org </a> -->
                     </div>
                     <div class = "option">                       
                             <p> National Health Service </p>
@@ -62,4 +62,21 @@
         </body>
         <script src = "/js/script.js" type="text/javascript"></script>
         <link href="/css/theme.css" rel="stylesheet" type="text/css">
+        <style>
+            body {
+                background-image: url("/img/home.jpg");
+                background-repeat: no-repeat;
+                background-size: 100%;                
+            }
+
+              /* @media for Responsive design. */
+            @media only screen and (max-width: 700px) {
+            
+            body {
+                background-image: url("/img/home.jpg");
+                background-repeat: no-repeat;
+                background-size: auto;                
+            }
+            }
+        </style>
     </html>
