--- a/views/invalid-login.html
+++ b/views/invalid-login.html
@@ -5,10 +5,10 @@
             <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         </head>
         <body>
-            <div class = "header" onclick = "homeFunction()">
-                <p> Mental Health Web App </p>                
-            </div>
             <div class = "main">
+                <div class = "header" onclick = "homeFunction()">
+                    <p> Mental Health Web App </p>                
+                </div>           
                 <div class = "activities">
                     <h1> Login: </h1>
                     <p> Login to the Mental Health Web App to access helpful activities and advice. </p>
@@ -38,4 +38,21 @@
         </body>
         <script src = "/js/script.js" type="text/javascript"></script>
         <link href="/css/theme.css" rel="stylesheet" type="text/css">
+        <style>
+            body {
+                background-image: url("/img/login.jpg");
+                background-repeat: no-repeat;
+                background-size: 100%;                
+            }
+
+              /* @media for Responsive design. */
+            @media only screen and (max-width: 700px) {
+            
+            body {
+                background-image: url("/img/login.jpg");
+                background-repeat: no-repeat;
+                background-size: auto;                
+            }
+            }
+        </style>
     </html>
