--- a/views/breathing.html
+++ b/views/breathing.html
@@ -26,5 +26,22 @@
         </body>
         <script src = "/js/script.js" type = "text/javascript" ></script>
         <script src = "/js/breathingscript.js" type = "text/javascript" ></script>
-        <link href = "/css/theme.css" rel = "stylesheet" type = "text/css">        
+        <link href = "/css/theme.css" rel = "stylesheet" type = "text/css">  
+        <style>
+            body {
+                background-image: url("/img/home.jpg");
+                background-repeat: no-repeat;
+                background-size: 100%;                           
+            }
+
+              /* @media for Responsive design. */
+            @media only screen and (max-width: 700px) {
+            
+            body {
+                background-image: url("/img/home.jpg");
+                background-repeat: no-repeat;
+                background-size: auto;                
+            }
+            }
+        </style>      
     </html>
